Aress7/src/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Completed_On__c</fullName>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldAware_ID__c</fullName>
        <externalId>true</externalId>
        <label>FieldAware ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Name__c</fullName>
        <label>Installer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scheduled_On__c</fullName>
        <label>Scheduled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Started_On__c</fullName>
        <label>Started On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job</label>
    <nameField>
        <label>Job Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>